--- a/PLACTICE/migrations/alembic.ini
+++ b/PLACTICE/migrations/alembic.ini
@@ -48,3 +48,7 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
+
+[alembic]
+script_location = alembic
+
